# exploring-deblurring-CNN

./: .bazelrc  .gitattributes  .gitignore  .ruff.toml  BUILD  LICENSE  MODULE.bazel  README.md  __main__.py  mass_test.ps1  requirements.in  requirements_torch_lock.txt  resizer.py
app/: BUILD  app.py  data.py  pywin32_patch.py  utils.py  window.py
cli/: BUILD  __main__.py
docs/: log_sperimentale.ods  notes.md  paper.tex  references.bib
docs/figures/: loss.json  loss_content.txt  loss_frequency.txt  out.txt  process_loss.py  process_validation_metrics.py  validation_metrics.json  validation_metrics_psnr.txt  validation_metrics_ssim.txt
docs/figures/validations/: validation_metrics_100.json  validation_metrics_1000.json  validation_metrics_1025.json  validation_metrics_1050.json  validation_metrics_1075.json  validation_metrics_1100.json  validation_metrics_1125.json  validation_metrics_1150.json  validation_metrics_1175.json  validation_metrics_1200.json  validation_metrics_1225.json  validation_metrics_125.json  validation_metrics_1250.json  validation_metrics_1275.json  validation_metrics_1300.json  validation_metrics_1325.json  validation_metrics_1350.json  validation_metrics_1375.json  validation_metrics_1400.json  validation_metrics_1425.json  validation_metrics_1450.json  validation_metrics_1475.json  validation_metrics_150.json  validation_metrics_1500.json  validation_metrics_1525.json  validation_metrics_1550.json  validation_metrics_1575.json  validation_metrics_1600.json  validation_metrics_1625.json  validation_metrics_1650.json  validation_metrics_1675.json  validation_metrics_1700.json  validation_metrics_1725.json  validation_metrics_175.json  validation_metrics_1750.json  validation_metrics_1775.json  validation_metrics_1800.json  validation_metrics_1825.json  validation_metrics_1850.json  validation_metrics_1875.json  (+28 more)
edcnn/layers/: convir_layers.py
edcnn/layers/original/: __init__.py  convir_layers.py
lib/: BUILD  dataloader.py  layers.py  ssim.py  test.py  train.py  utils.py  validation.py  wiener.py
lib/layers/: __init__.py  convir_layers.py  data.py  gradual_warmup.py  multiscale_layers.py  utils.py
lib/layers/original/: convir_layers.py
scripts/: pygui_tests.py
